test/libyul/yulSyntaxTests/name_clash_function_var_subscope_reverse.yul
{
	{ let g := 0 }
	function g() {}
}
// ----
// DeclarationError 1395: (5-15='let g := 0'): Variable name g already taken in this scope.
